Implementando paginacao
Adicionando a paginacao ao service e ao ranking geral